Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.14.2
-
-
308845cd720969a5f3456caa8cf72023f120aecf (qt/qtbase/dev) 0f6a9fdc2f1a20d590e51bbc3eee93c2ffeb1850 (qt/qtbase/6.2)
Description
Sort indicator isn't taken into account when painting text for a QHeaderView section when QHeaderView::setDefaultAlignment(Qt::AlignRight) and stylesheet positions sort indicator on the right side of the text. As a result the sort indicator and text overlap.
Steps to reproduce the issue:
- Run the attached example & observe the table view header
Attachments
Issue Links
- relates to
-
QTBUG-81571 QStyleSheetStyle sizeFromContents for CT_HeaderSection not taking into account the sortIndicator
-
- Closed
-
- resulted in
-
QTBUG-132882 StyleSheet in QHeaderView Chops off first letter
-
- In Review
-
For Gerrit Dashboard: QTBUG-84117 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
353409,4 | In headers with only the arrow styled, prevent overlapping with text | dev | qt/qtbase | Status: MERGED | +2 | 0 |
353673,2 | In headers with only the arrow styled, prevent overlapping with text | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |